<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto">
    <git.artdeell.mojo.prefs.BackButtonPreference />
    <PreferenceCategory android:title="@string/preference_category_experimental_settings">

        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preference_widget_material_switch"
            android:key="dump_shaders"
            android:title="@string/preference_shader_dump_title"
            android:summary="@string/preference_shader_dump_description"
            />
        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preference_widget_material_switch"
            android:defaultValue="false"
            android:key="bigCoreAffinity"
            android:title="@string/preference_force_big_core_title"
            android:summary="@string/preference_force_big_core_desc" />
        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preference_widget_material_switch"
            android:defaultValue="false"
            android:key="freedrenoSysmem"
            android:title="@string/preference_sysmem_title"
            android:summary="@string/preference_sysmem_summary"
            />
        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preference_widget_material_switch"
            android:defaultValue="false"
            android:key="alsoftForceOpenSL"
            android:icon="@drawable/ic_px_dynamic"
            android:title="@string/preference_alsoft_opensl_title"
            android:summary="@string/preference_alsoft_opensl_summary"
            />
        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preference_widget_material_switch"
            android:key="disableCurseforgeApi"
            android:defaultValue="false"
            android:title="@string/preference_disable_curseforge_title"
            android:summary="@string/preference_disable_curseforge_desc" />
        <EditTextPreference
            android:key="curseforgeApiKeyOverride"
            android:title="@string/preference_curseforge_api_key_title"
            android:summary="@string/preference_curseforge_api_key_desc"
            android:dialogTitle="@string/preference_curseforge_api_key_title"
            android:dialogMessage="@string/preference_curseforge_api_key_desc" />
        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preference_widget_material_switch"
            android:defaultValue="false"
            android:key="ubwcWorkaround"
            android:title="@string/preference_ubwc_title"
            android:summary="@string/preference_ubwc_summary"
            />
    </PreferenceCategory>
</PreferenceScreen>