<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <git.artdeell.mojo.prefs.BackButtonPreference/>

    <PreferenceCategory android:title="@string/preference_category_theme">
        <androidx.preference.ListPreference
            android:defaultValue="system"
            android:key="theme_mode"
            android:entries="@array/theme_mode_names"
            android:entryValues="@array/theme_mode_values"
            android:title="@string/preference_theme_mode_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
        <androidx.preference.ListPreference
            android:defaultValue="dynamic"
            android:key="color_source"
            android:entries="@array/color_source_names"
            android:entryValues="@array/color_source_values"
            android:title="@string/preference_color_source_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
        <git.artdeell.mojo.prefs.ThemeColorPreference
            android:key="theme_custom_color"
            android:title="@string/preference_theme_color_title"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_display">
        <SwitchPreferenceCompat
            android:widgetLayout="@layout/preference_widget_material_switch"
            android:defaultValue="false"
            android:key="force_landscape"
            android:title="@string/preference_force_landscape_title"
            android:summary="@string/preference_force_landscape_description"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_background">
        <Preference
            android:key="set_custom_launcher_bg"
            android:title="@string/preference_set_custom_bg_title"
            android:summary="@string/preference_set_custom_bg_summary"
            app:iconSpaceReserved="false" />
        <Preference
            android:key="remove_custom_launcher_bg"
            android:title="@string/preference_remove_custom_bg_title"
            android:summary="@string/preference_remove_custom_bg_summary"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_animations">
        <androidx.preference.MultiSelectListPreference
            android:defaultValue="@array/animation_type_defaults"
            android:dialogTitle="@string/preference_animations_dialog_title"
            android:entries="@array/animation_type_names"
            android:entryValues="@array/animation_type_values"
            android:key="animation_types"
            android:title="@string/preference_animations_title"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</PreferenceScreen>
