<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/fragment_menu_main"
	android:gravity="top"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
	android:background="?attr/colorSurface">
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="0dp"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintBottom_toTopOf="@id/mc_version_spinner">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">
				<androidx.constraintlayout.widget.Guideline
					android:id="@+id/center_guideline"
					android:layout_width="0dp"
					android:layout_height="0dp"
					android:orientation="vertical"
					app:layout_constraintGuide_percent="0.5"/>
				<com.kdt.mcgui.LauncherMenuButton
					android:id="@+id/news_button"
					style="@style/LauncherMenuButton.Universal"
					android:layout_width="0dp"
					android:text="@string/mcl_tab_wiki"
					android:drawableStart="@drawable/ic_px_book"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintEnd_toStartOf="@id/social_divider" />
				<View
					android:id="@+id/social_divider"
					style="@style/LauncherFragment_Divider"
					android:layout_marginVertical="@dimen/padding_large"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintStart_toStartOf="@id/center_guideline"
					app:layout_constraintEnd_toEndOf="@id/center_guideline"
					app:layout_constraintBottom_toBottomOf="@id/news_button"/>
				<com.kdt.mcgui.LauncherMenuButton
					android:id="@+id/social_media_button"
					style="@style/LauncherMenuButton.Universal"
					android:layout_width="0dp"
					android:text="@string/mcl_button_social_media"
					android:drawableStart="@drawable/ic_social_media"
					app:layout_constraintTop_toTopOf="parent"
					app:layout_constraintStart_toEndOf="@id/social_divider"
					app:layout_constraintEnd_toEndOf="parent"/>
			</androidx.constraintlayout.widget.ConstraintLayout>

			<com.google.android.material.divider.MaterialDivider
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/mcl_section_quick_actions"
				android:textAllCaps="true"
				android:textAppearance="?attr/textAppearanceLabelMedium"
				android:textColor="?attr/colorOnSurfaceVariant"
				android:letterSpacing="0.08"
				android:paddingHorizontal="@dimen/padding_heavy"
				android:paddingTop="@dimen/padding_large"
				android:paddingBottom="@dimen/padding_medium" />

			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/mod_store_button"
				style="@style/LauncherMenuButton.Universal"
				android:layout_width="match_parent"
				android:drawableStart="@drawable/ic_add"
				android:text="@string/mcl_button_mod_store" />

			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/custom_control_button"
				style="@style/LauncherMenuButton.Universal"
				android:layout_width="match_parent"
				android:drawableStart="@drawable/ic_px_gamepad"
				android:text="@string/mcl_option_customcontrol" />

			<com.google.android.material.divider.MaterialDivider
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/padding_medium" />

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/mcl_section_instance_tools"
				android:textAllCaps="true"
				android:textAppearance="?attr/textAppearanceLabelMedium"
				android:textColor="?attr/colorOnSurfaceVariant"
				android:letterSpacing="0.08"
				android:paddingHorizontal="@dimen/padding_heavy"
				android:paddingTop="@dimen/padding_large"
				android:paddingBottom="@dimen/padding_medium" />

			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/open_files_button"
				style="@style/LauncherMenuButton.Universal"
				android:layout_width="match_parent"
				android:drawableStart="@drawable/ic_folder_managed"
				android:text="@string/mcl_button_manage_mods" />

			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/open_directory_button"
				style="@style/LauncherMenuButton.Universal"
				android:layout_width="match_parent"
				android:drawableStart="@drawable/ic_px_folder"
				android:text="@string/mcl_button_open_directory" />

			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/install_jar_button"
				style="@style/LauncherMenuButton.Universal"
				android:layout_width="match_parent"
				android:drawableStart="@drawable/ic_px_java_run"
				android:text="@string/main_install_jar_file" />

			<com.kdt.mcgui.LauncherMenuButton
				android:id="@+id/share_logs_button"
				style="@style/LauncherMenuButton.Universal"
				android:layout_width="match_parent"
				android:drawableStart="@drawable/ic_px_sharelog"
				android:text="@string/main_share_logs" />
		</LinearLayout>
	</ScrollView>

	<com.kdt.mcgui.mcVersionSpinner
		android:id="@+id/mc_version_spinner"
		android:layout_width="0dp"
		android:layout_height="@dimen/_52sdp"
		android:background="@android:color/transparent"
		android:drawableEnd="@drawable/spinner_arrow"

		app:drawableEndSize="@dimen/padding_heavy"
		app:drawableStartIntegerScaling="true"
		app:drawableStartSize="@dimen/_36sdp"
		app:drawableEndPadding="@dimen/_1sdp"

		app:layout_constraintBottom_toTopOf="@id/play_button"
		app:layout_constraintEnd_toStartOf="@+id/edit_profile_button"
		app:layout_constraintStart_toStartOf="parent" />

	<ImageButton
		android:id="@+id/edit_profile_button"
		android:layout_width="@dimen/_52sdp"
		android:layout_height="@dimen/_52sdp"
		android:background="?android:attr/selectableItemBackground"

		android:src="@drawable/ic_px_edit"
		app:layout_constraintBottom_toBottomOf="@+id/mc_version_spinner"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="@+id/mc_version_spinner" />


	<!-- This view is for cosmetic purpose only -->
	<View
		android:id="@+id/_background_display_view"
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:background="?attr/colorSurfaceContainerHigh"
		android:translationZ="-1dp"

		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintTop_toTopOf="@id/mc_version_spinner" />

	<com.kdt.mcgui.MineButton
		android:id="@+id/play_button"
		android:layout_width="match_parent"
		android:layout_height="@dimen/_62sdp"

		android:layout_marginHorizontal="@dimen/_17sdp"
		android:layout_marginBottom="@dimen/_15sdp"

		android:textAllCaps="true"
		android:text="@string/main_play"
		app:layout_constraintBottom_toBottomOf="parent"
		/>

</androidx.constraintlayout.widget.ConstraintLayout>

